2009-04-01  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Timothy Hatcher.

        https://bugs.webkit.org/show_bug.cgi?id=24989
        Refactor InspectorResource to use ScriptObject/FunctionCall.

        * bindings/js/JSInspectorControllerCustom.cpp:
        (WebCore::JSInspectorController::addResourceSourceToFrame): Tweaked to use
            a more appropriate type conversion.
        (WebCore::JSInspectorController::getResourceDocumentNode): Tweaked to
            accommodate for InspectorResource refactoring.
        * bindings/js/ScriptFunctionCall.cpp:
        (WebCore::ScriptFunctionCall::appendArgument): Added long long type to match
            existing jsNumber call signature.
        * bindings/js/ScriptFunctionCall.h: Declaration for above.
        * bindings/js/ScriptObject.cpp:
        (WebCore::createEmptyObject): Added.
        (WebCore::ScriptObject::ScriptObject):
        (WebCore::ScriptObject::set): Added a bunch of property setters.
        * bindings/js/ScriptObject.h: Declarations for above.
        * inspector/InspectorController.cpp: Moved all InspectorResource-managing code
            to InspectorResource.cpp
        (WebCore::InspectorController::populateScriptObjects): Changed to use
            refactored InspectorResource.
        (WebCore::InspectorController::resetScriptObjects): Ditto.
        (WebCore::InspectorController::pruneResources): Ditto.
        (WebCore::InspectorController::didCommitLoad): Ditto.
        (WebCore::InspectorController::addResource): Ditto.
        (WebCore::InspectorController::removeResource): Ditto.
        (WebCore::InspectorController::didLoadResourceFromMemoryCache): Ditto.
        (WebCore::InspectorController::identifierForInitialRequest): Ditto.
        (WebCore::InspectorController::willSendRequest): Ditto.
        (WebCore::InspectorController::didReceiveResponse): Ditto.
        (WebCore::InspectorController::didReceiveContentLength): Ditto.